[package]
name = "rusty-leaf"
version = "0.1.0"
description = "A command line interface for deployment of Darkdown"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
darkdown = "0.1.4"
dialoguer = "0.11.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = "1.0.196"
toml = "0.8.9"
